// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline with drilling on single measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on single measure should create expected props for core chart 1`] = `
Object {
  "drillableItems": Array [
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on single measure with underlining disabled should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on single measure with underlining disabled should create expected props for core chart 1`] = `
Object {
  "config": Object {
    "disableDrillUnderline": true,
  },
  "drillableItems": Array [
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on two measures should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on two measures should create expected props for core chart 1`] = `
Object {
  "drillableItems": Array [
    [Function],
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on two measures with underlining disabled should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with drilling on two measures with underlining disabled should create expected props for core chart 1`] = `
Object {
  "config": Object {
    "disableDrillUnderline": true,
  },
  "drillableItems": Array [
    [Function],
    [Function],
  ],
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with single measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with single measure should create expected props for core chart 1`] = `
Object {
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with two measures one PoP should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        Object {
          "measure": Object {
            "alias": "Won Last Year",
            "definition": Object {
              "popMeasureDefinition": Object {
                "measureIdentifier": "m_acugFHNJgsBy",
                "popAttribute": Object {
                  "identifier": "closed.year",
                  "type": "attribute",
                },
              },
            },
            "localIdentifier": "m_e40a8329_m_acugFHNJgsBy_closed.year",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    Object {
      "measure": Object {
        "alias": "Won Last Year",
        "definition": Object {
          "popMeasureDefinition": Object {
            "measureIdentifier": "m_acugFHNJgsBy",
            "popAttribute": Object {
              "identifier": "closed.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_e40a8329_m_acugFHNJgsBy_closed.year",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with two measures one PoP should create expected props for core chart 1`] = `
Object {
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with two measures should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with two measures should create expected props for core chart 1`] = `
Object {
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;

exports[`Headline with two measures with german separators should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`Headline with two measures with german separators should create expected props for core chart 1`] = `
Object {
  "config": Object {
    "separators": Object {
      "decimal": ",",
      "thousand": ".",
    },
  },
  "exportTitle": "Headline",
  "workspace": "testWorkspace",
}
`;
